--- a/flipkart.html
+++ b/flipkart.html
@@ -113,7 +113,8 @@
                 <div class="moreMenu">
                     <div class="moreList">
                         <i class="fa-solid fa-bell"></i>
-                        <p>Notification Preferences</p>
+                        <p>Preferences</p>
+
                     </div>
                     <div class="menuList">
                         <i class="fa-solid fa-circle-question"></i>
@@ -140,40 +141,45 @@
     <nav>
         <div class="nav-item">
             <img src="images/navbar/category1.png" alt="product">
-            <p>Top Offers</p>
+            <div class="item-name"><a href="#">Top Offers</a></div>
         </div>
         <div class="nav-item">
             <img src="images/navbar/category2.png" alt="product">
-            <p>Grocery</p>
+            <div class="item-name"><a href="#">Grocery</a></div>
         </div>
         <div class="nav-item">
             <img src="images/navbar/category3.png" alt="product">
-            <p>Mobile</p>
+            <div class="item-name"><a href="#">Mobile</a></div>
         </div>
         <div class="nav-item">
             <img src="images/navbar/category4.png" alt="product">
-            <p>Fashion</p>
+            <div class="item-name"><a href="#">Fashion<span style="margin-left:5px ;"><i
+                            class="fa-solid fa-angle-down fa-2xs"></i></span></a></div>
         </div>
         <div class="nav-item">
             <img src="images/navbar/category5.png" alt="product">
-            <p>Electronics</p>
+            <div class="item-name"><a href="#">Electronic<span style="margin-left:5px ;"><i
+                            class="fa-solid fa-angle-down fa-2xs"></i></span></a></div>
         </div>
         <div class="nav-item">
             <img src="images/navbar/category6.jpeg" alt="product">
-            <p>Home</p>
+            <div class="item-name"><a href="#">Home<span style="margin-left:5px ;"><i
+                            class="fa-solid fa-angle-down fa-2xs"></i></span></a></div>
         </div>
         <div class="nav-item">
             <img src="images/navbar/category7.png" alt="product">
-            <p>Appliances</p>
+            <div class="item-name"><a href="#">Appliances<span style="margin-left:5px ;"><i
+                            class="fa-solid fa-angle-down fa-2xs"></i></span></a></div>
         </div>
         <div class="nav-item">
             <img src="images/navbar/category8.png" alt="product">
-            <p>Travel</p>
+            <div class="item-name"><a href="#">Travel</a></div>
         </div>
 
         <div class="nav-item">
             <img src="images/navbar/category9.png" alt="product">
-            <p>Beauty,Toys &amp; More</p>
+            <div class="item-name"><a href="#">Beauty,Toys &amp; More<span style="margin-left:5px ;"><i
+                            class="fa-solid fa-angle-down fa-2xs"></i></span></a></div>
         </div>
     </nav>
 
@@ -183,8 +189,11 @@
         <div class="row">
             <div class="col-sm-9 offset-1 slider">
                 <div class="row secheading">
-
-                    <h4>Deals of the Day</h4>
+                    <div class="dealoftheday">
+                        <h4>Deals of the Day</h4>
+                        <i class="fa-regular fa-clock"></i>
+                        <p>22:07:36 left</p>
+                    </div>
                     <button class="btn btn-primary">View All</button>
 
                 </div>
@@ -252,9 +261,17 @@
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
                         </div>
+
                     </div>
                 </div>
+                <div class="carousel_btn">
+                    <svg width="14.6" height="27" viewBox="0 0 16 27" xmlns="http://www.w3.org/2000/svg"
+                        style="transform: rotate(180deg)">
+                        <path d="M16 23.207L6.11 13.161 16 3.093 12.955 0 0 13.161l12.955 13.161z" fill="black"></path>
+                    </svg>
+                </div>
             </div>
+
             <div class="col-sm-2 banner">
                 <img src="images/section-1/specialoffer.webp" alt="banner">
             </div>
@@ -263,22 +280,22 @@
             <div class="col-sm offset-1 slider2">
                 <div class="row secheading">
                     <div class="section-2-subheading">
-                    <h4>Books And music Instruments</h4>
-                    <p>Shop Now!</p>
+                        <h4>Books And music Instruments</h4>
+                        <p>Shop Now!</p>
                     </div>
                     <button class="btn btn-primary">View All</button>
 
                 </div>
                 <div class="row">
-                    <div class="col-sm">
-                        <div class="card-layout">
+                    <div class="col-sm-2">
+                        <div class="card-layout zoom">
                             <img src="images/section-2/section-2-item1.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
                             <p class="price">From 10800</p>
                             <p class="brand">Sony</p>
                         </div>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-sm-2">
                         <div class="card-layout">
                             <img src="images/section-2/section-2-item2.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
@@ -286,7 +303,7 @@
                             <p class="brand">Sony</p>
                         </div>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-sm-2">
                         <div class="card-layout">
                             <img src="images/section-2/section-2-item3.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
@@ -294,7 +311,7 @@
                             <p class="brand">Sony</p>
                         </div>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-sm-2">
                         <div class="card-layout">
                             <img src="images/section-2/section-2-item4.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
@@ -302,7 +319,7 @@
                             <p class="brand">Sony</p>
                         </div>
                     </div>
-                    <div class="col-sm">
+                    <div class="col-sm-2">
                         <div class="card-layout">
                             <img src="images/section-2/section-2-item5.jpeg" alt="Camera">
                             <p class="card-title">Monitors</p>
@@ -312,10 +329,10 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </div>
-    
+
 
     <script src="https://kit.fontawesome.com/39cee866b1.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
