--- a/flipkart.html
+++ b/flipkart.html
@@ -241,15 +241,12 @@
                             <p class="brand">Sony</p>
                         </div>
                     </div>
-                   
+                    <div class="carousel_btn">
+                        <i class="fa-solid fa-angle-right fa-2x"></i>
+                    </div>
+                   </div>
                 </div>
-                <div class="carousel_btn">
-                    <svg width="14.6" height="27" viewBox="0 0 16 27" xmlns="http://www.w3.org/2000/svg"
-                        style="transform: rotate(180deg)">
-                        <path d="M16 23.207L6.11 13.161 16 3.093 12.955 0 0 13.161l12.955 13.161z" fill="black"></path>
-                    </svg>
-                </div>
-            </div>
+                
 
             <div class="col-sm-2 banner">
                 <img src="images/section-1/specialoffer.webp" alt="banner">
